# maynard

./: README.md  _remove.sh  configure.ac  maynard.in  maynard.spec  weston.ini
data/: Makefile.am  org.berry.maynard.gschema.xml.in.in  org.raspberrypi.maynard.gschema.xml.in.in
po/: POTFILES.in
shell/: Makefile.am  app-icon.c  app-icon.h  clock.c  clock.h  favorites.c  favorites.h  launcher.c  launcher.h  maynard.c  maynard.gresource.xml  panel.c  panel.h  shell-app-system.c  shell-app-system.h  shell-helper.c  vertical-clock.c  vertical-clock.h
